--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,13 +8,27 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="212dp"
-        android:layout_height="76dp"
+        android:layout_width="339dp"
+        android:layout_height="163dp"
         android:autoSizeTextType="uniform"
         android:text="@string/app_description"
+        android:textAlignment="center"
+        app:emojiCompatEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25" />
+
+    <TextView
+        android:id="@+id/textaboutdev"
+        android:layout_width="320dp"
+        android:layout_height="48dp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/dev_info"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
