--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -60,5 +60,9 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/category_general">
 
+        <Preference
+            app:key="restore"
+            app:title="@string/general_restore" />
+
     </PreferenceCategory>
 </PreferenceScreen>
